tests/paczka1/small_fuzzy/37286065.err
Error in line 2: UZg3u6owqi A867 96,8
Error in line 4: UZg3u6owqi S963 41,3
Error in line 6: UZg3u6owqi A882 20,7
Error in line 11: UZg3u6owqi A867 73,4
Error in line 10: s6Le S683 31,2
Error in line 13: s6Le S963 11,4
